--- a/static/css/header.css
+++ b/static/css/header.css
@@ -12,7 +12,7 @@ header{
   /* 设置宽度高度背景颜色 */
   height: auto;
   width: 100%;
-  height: 50px;
+  height: 60px;
   background:#252525;
   position: fixed; /*固定在顶部*/
   margin-bottom: 5px;
@@ -30,18 +30,24 @@ header ul{
   padding: 0;
 }
 header li {
-  float:left; /* 使li内容横向浮动，即横向排列  */
   margin-right: 4%;  /* 两个li之间的距离*/
-  margin-top: 12px;
+  margin-top: 19px;
   position: relative;
   overflow: hidden;
   color: #dadada;
+  font-size: 17px;
 }
 header p.pagetitle{
   color: #ffffff;
   font-size: 25px;
   font-family: 'siyuanheiti';
-  margin-top: -6px;
+  margin-top: -7px;
+}
+header li.left{
+  float:left;
+}
+header li.right{
+  float: right;
 }
 
 header li a{
