--- a/templates/index.html
+++ b/templates/index.html
@@ -3,60 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/index.css')}}" />
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/header.css')}}" />
   <title>share your file to others - FilesSharer</title>
 </head>
 <body>
   <header>
     <ul>
-      <li><p class="pagetitle">FS</p></li>
-      <li><a>About</a></li>
-      <li><a>Join us</a></li>
+      <li class="left"><p class="pagetitle">FS</p></li>
+      <li class="left"><a>关于</a></li>
+      <li class="left"><a>加入</a></li>
+
+      <li class="right"><a href="/auth/login">登录/注册</a></li>
     </ul>
   </header>
 
-  <div id="app">
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-    <h1>do nothing</h1>
-  </div>
+  <div id="app"></div>
 </body>
 </html>
