new: a) add .gitignore b) add sql

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -24,6 +24,12 @@
     </ul>
   </header>
 
-  <div id="app"></div>
+  <div id="app">
+    <form action="/auth/login" method="post">
+      <p>用户名：<input id="username" /></p>
+      <p>密码：<input id="username" /></p>
+      <input type="submit" value="确定">
+    </form>
+  </div>
 </body>
 </html>
