--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <ul>
-      <li class="left"><p class="pagetitle">FS</p></li>
+      <li class="left"><p class="pagetitle"><a href="/" style="color: #ffffff;">FS</a></p></li>
       <li class="left"><a>关于</a></li>
       <li class="left"><a>加入</a></li>
 
