more beautiful page

--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,7 @@
       <li class="left"><a>关于</a></li>
       <li class="left"><a>加入</a></li>
 
-      <li class="right"><a href="/auth/login">{ 登录/注册 | username}</a></li>
+      <li class="right"><a href="/auth/login">{% block user %}{% endblock %}</a></li>
     </ul>
   </header>
 
